[gd_scene load_steps=8 format=3 uid="uid://d0yphs5r8flo7"]

[ext_resource type="Script" path="res://scenes/enemies/helicopter/helicopter.gd" id="1_oja2x"]
[ext_resource type="Texture2D" uid="uid://dsqgjtldkf0ms" path="res://assets/visuals/sprites/enemies/helicopter/helicopter_dead.png" id="2_6ns3q"]
[ext_resource type="AudioStream" uid="uid://bhpopbmdgvi11" path="res://assets/sounds/sfx/enemies/helicopter/helicopter_hurt.wav" id="2_8441i"]
[ext_resource type="Texture2D" uid="uid://bq7wftppngfop" path="res://assets/visuals/sprites/enemies/helicopter/helicopter_fly_1.png" id="3_4esvo"]
[ext_resource type="Texture2D" uid="uid://bdrxyenapfxtn" path="res://assets/visuals/sprites/enemies/helicopter/helicopter_fly_2.png" id="4_7jjm1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eifk0"]
size = Vector2(8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6obb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6ns3q")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4esvo")
}, {
"duration": 1.0,
"texture": ExtResource("4_7jjm1")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[node name="Helicopter" type="Node2D"]
script = ExtResource("1_oja2x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_eifk0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r6obb")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.575716

[node name="Dead_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8441i")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
